design changes (fixed the issue with overflow, added autoscroll whenever a new text is sent, added space between consecutive texts from non-user accounts)

--- a/react-chat/src/main.css
+++ b/react-chat/src/main.css
@@ -17,4 +17,6 @@
 body{
     @apply primary !important;
 }
-
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
